# wavora

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README-zh.md  README.md  build.rs  run.sh
.github/workflows/: ci.yml  release.yml
crates/wavora-audio-analysis/: Cargo.toml
crates/wavora-audio-analysis/src/: lib.rs
crates/wavora-core/: Cargo.toml
crates/wavora-core/src/: lib.rs
crates/wavora-i18n/: Cargo.toml
crates/wavora-i18n/src/: lib.rs
crates/wavora-library/: Cargo.toml
crates/wavora-library/src/: lib.rs
crates/wavora-media/: Cargo.toml
crates/wavora-media/src/: artwork.rs  audio.rs  lib.rs  library.rs  lyrics.rs  uri.rs
crates/wavora-ui/: Cargo.toml  README.md  build.rs
crates/wavora-ui/src/: inspector.rs  lib.rs  player.rs  surface.rs  theme.rs  tokens.rs
crates/wavora-visuals/: Cargo.toml  build.rs
crates/wavora-visuals/src/: lib.rs
docs/: ARCHITECTURE.md  DESIGN.md  index.md
docs/dev/: index.md
docs/explanation/: index.md  system-architecture.md  track-identity.md  visual-design.md
docs/how-to/: playlists.md
docs/reference/: configuration.md  index.md  lyrics-format.md  track-identity.md  visuals.md  wavora-lyrics.schema.json  workspace.md
examples/lyrics/: Signal.flac.wlyric.json
packaging/: bump-version.sh  install-release.sh  install.sh  io.github.ming2k.Wavora.desktop  io.github.ming2k.Wavora.metainfo.xml  wavora-launcher
src/: app.rs  artwork.rs  config.rs  lib.rs  main.rs  ui.rs  visuals.rs
