[workspace]
members = [
    ".",
    "crates/wavora-core",
    "crates/wavora-i18n",
    "crates/wavora-media",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/ming2k/wavora"

[workspace.dependencies]
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
walkdir = "2.5.0"
wavora-core = { path = "crates/wavora-core" }
wavora-i18n = { path = "crates/wavora-i18n" }
wavora-media = { path = "crates/wavora-media" }

[package]
name = "wavora"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A local, visually immersive music player built with the Optics graphics stack"
license.workspace = true
repository.workspace = true

[dependencies]
directories = "6.0.0"
flux = { path = "../optics/bindings/flux-rs/crates/flux" }
iris = { path = "../optics/bindings/iris-rs/crates/iris" }
serde.workspace = true
serde_json = "1.0.149"
thiserror.workspace = true
wavora-core.workspace = true
wavora-i18n.workspace = true
wavora-media.workspace = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
