[workspace]
members = [
    ".",
    "crates/wavora-audio-analysis",
    "crates/wavora-core",
    "crates/wavora-i18n",
    "crates/wavora-library",
    "crates/wavora-media",
    "crates/wavora-ui",
    "crates/wavora-visuals",
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/ming2k/wavora"

[workspace.dependencies]
crossbeam-channel = "0.5.15"
blake3 = "1.8.5"
# Optics graphics stack (Iris / Lens / Flux). Pinned to a commit on
# https://github.com/ming2k/optics so any consumer can build without a
# sibling optics checkout. The native C libraries still have to be
# installed separately (see README → Build); these git deps only pull in
# the Rust `-rs` bindings, which locate libiris/liblens/libflux via
# pkg-config at build time.
flux = { git = "https://github.com/ming2k/optics.git", rev = "03ddb1c566ad7553f26e9f0f0e7f97c2cf45e09e", package = "flux" }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
iris = { git = "https://github.com/ming2k/optics.git", rev = "03ddb1c566ad7553f26e9f0f0e7f97c2cf45e09e", package = "iris" }
lens = { git = "https://github.com/ming2k/optics.git", rev = "03ddb1c566ad7553f26e9f0f0e7f97c2cf45e09e", package = "lens" }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
rusty-chromaprint = "=0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", default-features = false, features = ["flac", "isomp4", "mp3", "ogg", "wav"] }
thiserror = "2.0.18"
uuid = { version = "1.23.5", features = ["serde", "v4"] }
walkdir = "2.5.0"
wavora-audio-analysis = { path = "crates/wavora-audio-analysis" }
wavora-core = { path = "crates/wavora-core" }
wavora-i18n = { path = "crates/wavora-i18n" }
wavora-library = { path = "crates/wavora-library" }
wavora-media = { path = "crates/wavora-media" }
wavora-ui = { path = "crates/wavora-ui" }
wavora-visuals = { path = "crates/wavora-visuals" }

[package]
name = "wavora"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A local, visually immersive music player built with the Optics graphics stack"
license.workspace = true
repository.workspace = true

[dependencies]
directories = "6.0.0"
flux.workspace = true
image.workspace = true
iris.workspace = true
lens.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wavora-core.workspace = true
wavora-i18n.workspace = true
wavora-library.workspace = true
wavora-media.workspace = true
wavora-ui.workspace = true
wavora-visuals.workspace = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
