[package]
name = "wavora-library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistent local-media identity and playlist catalog for Wavora"

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true
uuid.workspace = true
wavora-core.workspace = true
wavora-media.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
