[package]
name = "wavora-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Media discovery, decoding, playback, and PCM analysis for Wavora"

[dependencies]
crossbeam-channel.workspace = true
gstreamer = "0.25.2"
gstreamer-app = "0.25.2"
rodio = { version = "0.22.2", default-features = false, features = ["symphonia-all"] }
thiserror.workspace = true
walkdir.workspace = true
wavora-core.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
