[package]
name = "wavora-visuals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Audio-reactive Flux visual engines for Wavora"

[dependencies]
flux.workspace = true
iris.workspace = true
wavora-audio-analysis.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
